--- a/src/assets/locale/aot/messages.xlf
+++ b/src/assets/locale/aot/messages.xlf
@@ -209,6 +209,13 @@
           <context context-type="linenumber">54</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="3710102540025495957" datatype="html">
+        <source>New Lead Coach</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/guudcomponents/formularios/becoach/becoach.component.ts</context>
+          <context context-type="linenumber">10</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="4348920359154187664" datatype="html">
         <source>Supplier</source>
         <context-group purpose="location">
@@ -243,6 +250,13 @@
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/guudcomponents/formularios/besupplier/besupplier.component.html</context>
           <context context-type="linenumber">34</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="3164142382358915915" datatype="html">
+        <source>New Lead Supplier</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/guudcomponents/formularios/besupplier/besupplier.component.ts</context>
+          <context context-type="linenumber">16</context>
         </context-group>
       </trans-unit>
       <trans-unit id="8192611234651859307" datatype="html">
@@ -325,6 +339,13 @@
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/guudcomponents/modales/modales.component.html</context>
           <context context-type="linenumber">12</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="2747957744712599303" datatype="html">
+        <source>Registered Data</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/services/guudapi.service.ts</context>
+          <context context-type="linenumber">30</context>
         </context-group>
       </trans-unit>
       <trans-unit id="7367250938421424000" datatype="html">
