--- a/src/assets/locale/messages.xlf
+++ b/src/assets/locale/messages.xlf
@@ -668,8 +668,8 @@
           <context context-type="linenumber">26</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="8041765285755439154" datatype="html">
-        <source>ES</source>
+      <trans-unit id="4677726785527621059" datatype="html">
+        <source>EN</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/guudcomponents/menu/langmenu/langmenu.component.html</context>
           <context context-type="linenumber">6</context>
@@ -850,6 +850,35 @@
           <context context-type="linenumber">27</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="5641841676229785283" datatype="html">
+        <source>https://d2lhr769yt64fs.cloudfront.net/videos/rutinas/38faa3dd-7c3d-48ac-a2ad-fcfdcaf7c20f.mp4</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/views/coach/coach.component.ts</context>
+          <context context-type="linenumber">36</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/views/tutorials/welcome/welcome.component.ts</context>
+          <context context-type="linenumber">13</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="6080032443148239733" datatype="html">
+        <source>https://d2lhr769yt64fs.cloudfront.net/videos/rutinas/90cdfab9-bd5b-48ea-b7ee-7f0c6e223d3b.mp4</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/views/coach/coach.component.ts</context>
+          <context context-type="linenumber">42</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/views/tutorials/welcome/welcome.component.ts</context>
+          <context context-type="linenumber">12</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="7053559359560168345" datatype="html">
+        <source>https://d2lhr769yt64fs.cloudfront.net/videos/introduccion/9b88ccd5-2e9d-45ec-8c12-8eca32f3d633.mp4</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/views/history/history.component.ts</context>
+          <context context-type="linenumber">30</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="4867551992419556951" datatype="html">
         <source>GUUD <x id="LINE_BREAK" ctype="lb" equiv-text="&lt;br&gt;"/><x id="LINE_BREAK" ctype="lb" equiv-text="&lt;br&gt;"/>Sustainability</source>
         <context-group purpose="location">
@@ -871,6 +900,31 @@
           <context context-type="linenumber">19,21</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="4359276365113713222" datatype="html">
+        <source>https://d2lhr769yt64fs.cloudfront.net/videos/rutinas/223664a6-a6e8-47b6-be97-cd012d6d4690.mp4</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/views/tutorials/calendars/calendars.component.ts</context>
+          <context context-type="linenumber">12</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/views/tutorials/calendars/calendars.component.ts</context>
+          <context context-type="linenumber">13</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="7764347691248072148" datatype="html">
+        <source>https://d2lhr769yt64fs.cloudfront.net/videos/rutinas/c27ed809-d673-4e3c-b013-1f5faf400357.mp4</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/views/tutorials/sports/sports.component.ts</context>
+          <context context-type="linenumber">12</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="5310555303414359235" datatype="html">
+        <source>https://d2lhr769yt64fs.cloudfront.net/videos/rutinas/817c70da-40ad-4e33-a43c-d5e1b6fd0bce.mp4</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/views/tutorials/sports/sports.component.ts</context>
+          <context context-type="linenumber">13</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="5698150121794923956" datatype="html">
         <source>https://d2lhr769yt64fs.cloudfront.net/videos/rutinas/f6bd9284-7455-407a-b63e-ee1862c1670b.mp4</source>
         <context-group purpose="location">
@@ -882,6 +936,20 @@
         <source>https://d2lhr769yt64fs.cloudfront.net/videos/rutinas/ea381469-243b-4b77-960f-ad98d23dd3b3.mp4</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/views/tutorials/tips/tips.component.ts</context>
+          <context context-type="linenumber">13</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="1536264135389138578" datatype="html">
+        <source>https://d2lhr769yt64fs.cloudfront.net/videos/introduccion/1c1e1c65-4d6d-4827-be9a-5ad67a4810c2.mp4</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/views/tutorials/workouts/workouts.component.ts</context>
+          <context context-type="linenumber">12</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="3885430864261677732" datatype="html">
+        <source>https://d2lhr769yt64fs.cloudfront.net/videos/rutinas/2d926c03-8a25-41fe-a81e-e9e2c75b372a.mp4</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/views/tutorials/workouts/workouts.component.ts</context>
           <context context-type="linenumber">13</context>
         </context-group>
       </trans-unit>
